--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     
   
-    <title>Hackathon club| Code,Conquer,Learn</title>
+    <title>Hackathon club</title>
   </head>
   <body>
     <header class="header">
