--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" type="image/png" href="" />
-<link rel="icon" type="image/x-icon" href="./logo.ico" />
+    <link rel="icon" type="image/x-icon" href="./logo.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
       rel="stylesheet"/>
@@ -59,7 +59,7 @@
 
     <section class="section" id="section--1">
       <div class="section__title">
-        <h2 class="section__description">Features</h2>
+        <h2 class="section__description">Domains</h2>
         <h3 class="section__header">
           Everything you need in a modern bank and more.
         </h3>
