--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
               <use xlink:href="img/icons.svg#icon-trending-up"></use>
             </svg>
           </div>
-          <h5 class="features__header">Watch your money grow</h5>
+          <h5 class="features__header">Data structure and algorithms</h5>
           <p>
-            Nesciunt quos autem dolorum voluptates cum dolores dicta fuga
-            inventore ab? Nulla incidunt eius numquam sequi iste pariatur
-            quibusdam!
+            A well-chosen data structure and algorithm can make a tremendous difference in the efficiency and elegance of your code
+            By mastering data structures and algorithms, you'll be better equipped to come up with innovative solutions to complex problems, 
+            which can lead to the development of new software products and technologies
           </p>
         </div>
         <img
