--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       </div>
     </header>
 
-    <section class="section" id="section--1">
+        <section class="section" id="section--1">
       <div class="section__title">
         <h2 class="section__description">Domains</h2>
         <h3 class="section__header">
-          Everything you need in a modern bank and more.
+          Everything you need in a modern world is Coding !
         </h3>
       </div>
 
@@ -78,11 +78,13 @@
               <use xlink:href="img/icons.svg#icon-monitor"></use>
             </svg>
           </div>
-          <h5 class="features__header">100% digital bank</h5>
+          <h5 class="features__header">Web-Development</h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde alias
-            sint quos? Accusantium a fugiat porro reiciendis saepe quibusdam
-            debitis ducimus.
+            “A successful website does three things:
+It attracts the right kinds of visitors.
+Guides them to the main services or product you offer.
+Collect Contact details for future ongoing relation.”
+
           </p>
         </div>
 
