--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@ Collect Contact details for future ongoing relation.”
             class="btn operations__tab operations__tab--1 operations__tab--active"
             data-tab="1"
           >
-            <span>01</span>Instant Transfers
+            <span>01</span>Smart India Hackathon
           </button>
           <button class="btn operations__tab operations__tab--2" data-tab="2">
-            <span>02</span>Instant Loans
+            <span>02</span>GSOC
           </button>
           <button class="btn operations__tab operations__tab--3" data-tab="3">
-            <span>03</span>Instant Closing
+            <span>03</span>Google Girl Hackthon
           </button>
         </div>
         <div
@@ -162,7 +162,7 @@ Collect Contact details for future ongoing relation.”
             </svg>
           </div>
           <h5 class="operations__header">
-            Tranfser money to anyone, instantly! No fees, no BS.
+            Take part in competitions and have a chance to win competition!
           </h5>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
