--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@ Collect Contact details for future ongoing relation.”
       </div>
     </section>
 
-    <section class="section" id="section--2">
+<section class="section" id="section--2">
       <div class="section__title">
-        <h2 class="section__description">Operations</h2>
+        <h2 class="section__description">Event's</h2>
         <h3 class="section__header">
-          Everything as simple as possible, but no simpler.
+          "Competition makes us faster, collaboration makes us better."
         </h3>
       </div>
 
