--- a/index.html
+++ b/index.html
@@ -164,11 +164,9 @@ Collect Contact details for future ongoing relation.”
           <h5 class="operations__header">
             Take part in competitions and have a chance to win competition!
           </h5>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+              <p>
+            Remember, coding competitions are as much about the process of learning and improving as they are about winning.
+            Stay positive, keep learning from your mistakes, and enjoy the thrill of problem-solving!
           </p>
         </div>
 
