--- a/index.html
+++ b/index.html
@@ -177,13 +177,11 @@ Collect Contact details for future ongoing relation.”
             </svg>
           </div>
           <h5 class="operations__header">
-            Buy a home or make your dreams come true, with instant loans.
+            compete with coders all across the world!
           </h5>
           <p>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
+            Google Summer of Code is a global, online program focused on bringing new contributors into open source software development. 
+            GSoC Contributors work with an open source organization on a 12+ week programming project under the guidance of mentors.
           </p>
         </div>
         <div class="operations__content operations__content--3">
@@ -193,13 +191,10 @@ Collect Contact details for future ongoing relation.”
             </svg>
           </div>
           <h5 class="operations__header">
-            No longer need your account? No problem! Close it instantly.
+            Let's learn!
           </h5>
           <p>
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.
+            Girl Hackathon is a program for women students in computer science and allied courses across India.
           </p>
         </div>
       </div>
@@ -209,7 +204,8 @@ Collect Contact details for future ongoing relation.”
       <div class="section_title section_title--testimonials">
         <h2 class="section__description">Team Members</h2>
         <h3 class="section__header">
-          Millions of Bankists are already making their lifes simpler.
+          Millions of Bankists are already making their lifes simpler.It has been designed to provide a platform for women in the engineering campus space to 
+          showcase their coding skills and promote creative solutions for real time technical challenge
         </h3>
       </div>
 
