--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@ Collect Contact details for future ongoing relation.”
             Let's learn!
           </h5>
           <p>
-            Girl Hackathon is a program for women students in computer science and allied courses across India.
+            Girl Hackathon is a program for women students in computer science and allied courses across India.It has been designed to provide a platform
+            for women in the engineering campus space to showcase their coding skills and promote creative solutions for real time technical challenge
           </p>
         </div>
       </div>
@@ -202,8 +203,7 @@ Collect Contact details for future ongoing relation.”
       <div class="section_title section_title--testimonials">
         <h2 class="section__description">Team Members</h2>
         <h3 class="section__header">
-          Millions of Bankists are already making their lifes simpler.It has been designed to provide a platform for women in the engineering campus space to 
-          showcase their coding skills and promote creative solutions for real time technical challenge
+          Millions of Bankists are already making their lifes simpler.
         </h3>
       </div>
 
