--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@ Collect Contact details for future ongoing relation.”
           </div>
           <h5 class="features__header">Artificial Intellegence</h5>
           <p>
-            "Artificial intelligence will reach human levels by around 2029. Follow that out further to, say, 2045, we will have multiplied the intelligence, the human biological machine intelligence of our civilization a billion-fold."
+            "Artificial intelligence will reach human levels by around 2029. Follow that out further to, say, 2045, 
+            we will have multiplied the intelligence, the human biological machine intelligence of our civilization a billion-fold."
           </p>
         </div>
       </div>
@@ -203,7 +204,7 @@ Collect Contact details for future ongoing relation.”
       <div class="section_title section_title--testimonials">
         <h2 class="section__description">Team Members</h2>
         <h3 class="section__header">
-          Millions of Bankists are already making their lifes simpler.
+          let's meet our team mates!
         </h3>
       </div>
 
@@ -212,10 +213,8 @@ Collect Contact details for future ongoing relation.”
           <div class="testimonial">
             <h5 class="testimonial__header">Web Development</h5>
             <blockquote class="testimonial__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Accusantium quas quisquam non? Quas voluptate nulla minima
-              deleniti optio ullam nesciunt, numquam corporis et asperiores
-           
+             We are building projects on web development which are basically done by using languages such as html ,css and javascript
+             also we are trying to make these projects as responsive as we can.
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-1.jpg" alt="" class="testimonial__photo" />
@@ -231,11 +230,8 @@ Collect Contact details for future ongoing relation.”
               Data structure and algorithms
             </h5>
             <blockquote class="testimonial__text">
-              Quisquam itaque deserunt ullam, quia ea repellendus provident,
-              ducimus neque ipsam modi voluptatibus doloremque, corrupti
-              laborum. Incidunt numquam perferendis veritatis neque repellendus.
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
-              deserunt exercitationem deleniti.
+              This is purva and shesh currently working working on data structure and algorithm domain in the club.
+              Also trying to master in competetive programming.
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-2.jpg" alt="" class="testimonial__photo" />
@@ -251,12 +247,8 @@ Collect Contact details for future ongoing relation.”
               Artificial Intelligence
             </h5>
             <blockquote class="testimonial__text">
-              Debitis, nihil sit minus suscipit magni aperiam vel tenetur
-              incidunt commodi architecto numquam omnis nulla autem,
-              necessitatibus blanditiis modi similique quidem. Odio aliquam
-              culpa dicta beatae quod maiores ipsa minus consequatur error sunt,
-              deleniti saepe aliquid quos inventore sequi. Necessitatibus id
-              alias reiciendis, perferendis facere.
+              Sanket and Vaishnavi are the lead of artificial intelligence domain.
+              Working on some intersting projecys based on A.I.
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-3.jpg" alt="" class="testimonial__photo" />
